--- a/Algorithm/pubspec.yaml
+++ b/Algorithm/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Algorithm
+name: algorithm
 description: A sample command-line application.
 # version: 1.0.0
 # homepage: https://www.example.com
