--- a/Flutter/chain_store/pubspec.yaml
+++ b/Flutter/chain_store/pubspec.yaml
@@ -23,11 +23,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  xml2json: ^4.1.1
+  chopper: ^3.0.1+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  # No version number means the latest version
+  build_runner:
+  chopper_generator: ^3.0.1+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
