--- a/Flutter/clean_architecture_tdd/pubspec.yaml
+++ b/Flutter/clean_architecture_tdd/pubspec.yaml
@@ -24,14 +24,31 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
+  # Service locator
+  get_it: ^4.0.1
+  # Bloc for state management
+  flutter_bloc: ^4.0.0
+  # Value equality
+  equatable: ^1.0.0
+  # Functional programming thingies
+  dartz: ^0.9.0
+  # Remote API
+  connectivity: ^0.4.3+7
+  http: ^0.12.0+2
+  # Local cache
+  shared_preferences: ^0.5.3+4
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  mockito: ^4.1.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
