--- a/Flutter/clean_architecture_tdd/pubspec.yaml
+++ b/Flutter/clean_architecture_tdd/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Functional programming thingies
   dartz: ^0.9.0
   # Remote API
-  connectivity: ^0.4.3+7
+  data_connection_checker: ^0.3.4
   http: ^0.12.0+2
   # Local cache
   shared_preferences: ^0.5.3+4
