--- a/Flutter/clean_architecture_tdd/pubspec.yaml
+++ b/Flutter/clean_architecture_tdd/pubspec.yaml
@@ -18,36 +18,29 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.7.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-
   # Service locator
   get_it: ^4.0.1
   # Bloc for state management
   flutter_bloc: ^4.0.0
   # Value equality
-  equatable: ^1.0.0
+  equatable: ^1.0.1
   # Functional programming thingies
   dartz: ^0.9.0
   # Remote API
   data_connection_checker: ^0.3.4
-  http: ^0.12.0+2
+  http: ^0.12.0+3
   # Local cache
-  shared_preferences: ^0.5.3+4
-
+  shared_preferences: ^0.5.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  mockito: ^4.1.0
+  mockito: ^4.1.1
 
 
 # For information on the generic Dart part of this file, see the
