--- a/Flutter/firebase_storage_example/pubspec.yaml
+++ b/Flutter/firebase_storage_example/pubspec.yaml
@@ -24,14 +24,29 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  firebase_storage: ^3.1.6
+
+  google_sign_in: ^4.5.1
+  google_sign_in_web: ^0.9.1+1
+  google_sign_in_platform_interface: ^1.1.2
+
+  image_picker: ^0.6.7+2
+  image_picker_for_web: ^0.1.0+1
+
+  http: ^0.12.0+4
+  json_annotation: ^3.0.1
+  cached_network_image: ^2.1.0+1
+  flutter_svg: ^0.18.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^1.9.0
+  json_serializable: ^3.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
