--- a/Flutter/clean_architecture_tdd_final/.gitignore
+++ b/Flutter/clean_architecture_tdd_final/.gitignore
@@ -23,6 +23,7 @@
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
+**/ios/Flutter/Flutter 2.framework/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
