--- a/Flutter/clean_architecture_tdd_final/pubspec.yaml
+++ b/Flutter/clean_architecture_tdd_final/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   # Local cache
   shared_preferences: ^0.5.6
 
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^0.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
