--- a/Flutter/clean_architecture_tdd_final/android/gradle.properties
+++ b/Flutter/clean_architecture_tdd_final/android/gradle.properties
@@ -1,7 +1,10 @@
 org.gradle.jvmargs=-Xmx1536M
 
-android.enableR8=true
+# android.enableR8=true
 
 android.useAndroidX=true
 
 android.enableJetifier=true
+
+# org.gradle.warning.mode=all
+org.gradle.warning.mode=summary
